[package]
name = "esp-hal-misaligned"
version = "0.1.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["esp32s3"]
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-backtrace/esp32s2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
]

[dependencies]
defmt = "0.3.6"
defmt-rtt = "0.4.0"
esp-backtrace = { version = "0.13.0", features = [
    "exception-handler",
    "panic-handler",
    "defmt"
] }
esp-hal = { version = "0.19.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"
